# zephyr

modules/executorch/: CMakeLists.txt  Kconfig
samples/modules/executorch/hello_world/: CMakeLists.txt  README.rst  prj.conf  sample.yaml  validate_setup.py
samples/modules/executorch/hello_world/boards/: native_sim.conf  native_sim_native_64.conf  nrf54l15dk_nrf54l15_cpuapp.conf  qemu_cortex_m3.conf
samples/modules/executorch/hello_world/src/: et_memory_allocator.hpp  main.cpp  pal_zephyr.cpp  program_loader.cpp  program_loader.h
samples/modules/executorch/scripts/: build_model.py
submanifests/: optional.yaml
